compiler/y.output

state 0
	$accept: .file $end 

	FUNC  shift 4
	VAR  shift 3
	.  error

	declaration  goto 2
	file  goto 1

state 1
	$accept:  file.$end 
	file:  file.declaration 
	file:  file.EOF 

	$end  accept
	EOF  shift 6
	FUNC  shift 4
	VAR  shift 3
	.  error

	declaration  goto 5

state 2
	file:  declaration.    (1)
	declaration:  declaration.NEW_LINE 

	NEW_LINE  shift 7
	.  reduce 1 (src line 70)


state 3
	declaration:  VAR.identifier type 

	IDENTIFIER  shift 9
	.  error

	identifier  goto 8

state 4
	declaration:  FUNC.identifier LPAREN RPAREN type statement_block 
	declaration:  FUNC.identifier LPAREN field_list RPAREN type statement_block 

	IDENTIFIER  shift 9
	.  error

	identifier  goto 10

state 5
	file:  file declaration.    (2)
	declaration:  declaration.NEW_LINE 

	NEW_LINE  shift 7
	.  reduce 2 (src line 75)


state 6
	file:  file EOF.    (3)

	.  reduce 3 (src line 81)


state 7
	declaration:  declaration NEW_LINE.    (18)

	.  reduce 18 (src line 195)


state 8
	declaration:  VAR identifier.type 

	LBRACK  shift 15
	INT  shift 12
	FLOAT  shift 13
	STRING  shift 14
	.  error

	type  goto 11

state 9
	identifier:  IDENTIFIER.    (35)

	.  reduce 35 (src line 327)


state 10
	declaration:  FUNC identifier.LPAREN RPAREN type statement_block 
	declaration:  FUNC identifier.LPAREN field_list RPAREN type statement_block 

	LPAREN  shift 16
	.  error


state 11
	declaration:  VAR identifier type.    (15)

	.  reduce 15 (src line 169)


state 12
	type:  INT.    (36)

	.  reduce 36 (src line 337)


state 13
	type:  FLOAT.    (37)

	.  reduce 37 (src line 342)


state 14
	type:  STRING.    (38)

	.  reduce 38 (src line 347)


state 15
	type:  LBRACK.RBRACK type 
	type:  LBRACK.enumerable RBRACK type 

	RBRACK  shift 17
	INT_NUMBER  shift 19
	.  error

	enumerable  goto 18

state 16
	declaration:  FUNC identifier LPAREN.RPAREN type statement_block 
	declaration:  FUNC identifier LPAREN.field_list RPAREN type statement_block 

	IDENTIFIER  shift 9
	RPAREN  shift 20
	.  error

	identifier  goto 23
	field  goto 22
	field_list  goto 21

state 17
	type:  LBRACK RBRACK.type 

	LBRACK  shift 15
	INT  shift 12
	FLOAT  shift 13
	STRING  shift 14
	.  error

	type  goto 24

state 18
	type:  LBRACK enumerable.RBRACK type 

	RBRACK  shift 25
	.  error


state 19
	enumerable:  INT_NUMBER.    (43)

	.  reduce 43 (src line 386)


state 20
	declaration:  FUNC identifier LPAREN RPAREN.type statement_block 

	LBRACK  shift 15
	INT  shift 12
	FLOAT  shift 13
	STRING  shift 14
	.  error

	type  goto 26

state 21
	declaration:  FUNC identifier LPAREN field_list.RPAREN type statement_block 
	field_list:  field_list.COMMA field 

	COMMA  shift 28
	RPAREN  shift 27
	.  error


state 22
	field_list:  field.    (19)

	.  reduce 19 (src line 202)


state 23
	field:  identifier.type 

	LBRACK  shift 15
	INT  shift 12
	FLOAT  shift 13
	STRING  shift 14
	.  error

	type  goto 29

state 24
	type:  LBRACK RBRACK type.    (39)

	.  reduce 39 (src line 352)


state 25
	type:  LBRACK enumerable RBRACK.type 

	LBRACK  shift 15
	INT  shift 12
	FLOAT  shift 13
	STRING  shift 14
	.  error

	type  goto 30

state 26
	declaration:  FUNC identifier LPAREN RPAREN type.statement_block 

	LBRACE  shift 32
	.  error

	statement_block  goto 31

state 27
	declaration:  FUNC identifier LPAREN field_list RPAREN.type statement_block 

	LBRACK  shift 15
	INT  shift 12
	FLOAT  shift 13
	STRING  shift 14
	.  error

	type  goto 33

state 28
	field_list:  field_list COMMA.field 

	IDENTIFIER  shift 9
	.  error

	identifier  goto 23
	field  goto 34

state 29
	field:  identifier type.    (21)

	.  reduce 21 (src line 212)


state 30
	type:  LBRACK enumerable RBRACK type.    (40)

	.  reduce 40 (src line 360)


state 31
	declaration:  FUNC identifier LPAREN RPAREN type statement_block.    (16)

	.  reduce 16 (src line 176)


state 32
	statement_block:  LBRACE.NEW_LINE statement_list RBRACE 

	NEW_LINE  shift 35
	.  error


state 33
	declaration:  FUNC identifier LPAREN field_list RPAREN type.statement_block 

	LBRACE  shift 32
	.  error

	statement_block  goto 36

state 34
	field_list:  field_list COMMA field.    (20)

	.  reduce 20 (src line 206)


state 35
	statement_block:  LBRACE NEW_LINE.statement_list RBRACE 

	IF  shift 43
	FOR  shift 44
	RETURN  shift 42
	FUNC  shift 4
	COMMENT  shift 41
	INT_NUMBER  shift 19
	FLOAT_NUMBER  shift 54
	VAR  shift 3
	IDENTIFIER  shift 51
	SUB  shift 50
	SIN  shift 47
	COS  shift 48
	SQRT  shift 49
	LPAREN  shift 45
	.  error

	enumerable  goto 53
	expr  goto 40
	number  goto 52
	declaration  goto 39
	identifier  goto 46
	statement  goto 38
	statement_list  goto 37

state 36
	declaration:  FUNC identifier LPAREN field_list RPAREN type statement_block.    (17)

	.  reduce 17 (src line 185)


state 37
	statement_block:  LBRACE NEW_LINE statement_list.RBRACE 
	statement_list:  statement_list.statement 

	RBRACE  shift 55
	IF  shift 43
	FOR  shift 44
	RETURN  shift 42
	FUNC  shift 4
	COMMENT  shift 41
	INT_NUMBER  shift 19
	FLOAT_NUMBER  shift 54
	VAR  shift 3
	IDENTIFIER  shift 51
	SUB  shift 50
	SIN  shift 47
	COS  shift 48
	SQRT  shift 49
	LPAREN  shift 45
	.  error

	enumerable  goto 53
	expr  goto 40
	number  goto 52
	declaration  goto 39
	identifier  goto 46
	statement  goto 56

state 38
	statement_list:  statement.    (5)
	statement:  statement.NEW_LINE 

	NEW_LINE  shift 57
	.  reduce 5 (src line 94)


39: shift/reduce conflict (shift 7(0), red'n 7(0)) on NEW_LINE
state 39
	statement:  declaration.    (7)
	declaration:  declaration.NEW_LINE 

	NEW_LINE  shift 7
	.  reduce 7 (src line 107)


state 40
	statement:  expr.ASSIGNED expr NEW_LINE 
	expr:  expr.ADD expr 
	expr:  expr.SUB expr 
	expr:  expr.MUL expr 
	expr:  expr.QUO expr 
	expr:  expr.REM expr 

	ASSIGNED  shift 58
	ADD  shift 59
	SUB  shift 60
	MUL  shift 61
	QUO  shift 62
	REM  shift 63
	.  error


state 41
	statement:  COMMENT.    (9)

	.  reduce 9 (src line 123)


state 42
	statement:  RETURN.expr 

	INT_NUMBER  shift 19
	FLOAT_NUMBER  shift 54
	IDENTIFIER  shift 51
	SUB  shift 50
	SIN  shift 47
	COS  shift 48
	SQRT  shift 49
	LPAREN  shift 45
	.  error

	enumerable  goto 53
	expr  goto 64
	number  goto 52
	identifier  goto 46

state 43
	statement:  IF.expr statement_block ELSE statement_block 
	statement:  IF.expr statement_block 

	INT_NUMBER  shift 19
	FLOAT_NUMBER  shift 54
	IDENTIFIER  shift 51
	SUB  shift 50
	SIN  shift 47
	COS  shift 48
	SQRT  shift 49
	LPAREN  shift 45
	.  error

	enumerable  goto 53
	expr  goto 65
	number  goto 52
	identifier  goto 46

state 44
	statement:  FOR.expr statement_block 

	INT_NUMBER  shift 19
	FLOAT_NUMBER  shift 54
	IDENTIFIER  shift 51
	SUB  shift 50
	SIN  shift 47
	COS  shift 48
	SQRT  shift 49
	LPAREN  shift 45
	.  error

	enumerable  goto 53
	expr  goto 66
	number  goto 52
	identifier  goto 46

state 45
	expr:  LPAREN.expr RPAREN 

	INT_NUMBER  shift 19
	FLOAT_NUMBER  shift 54
	IDENTIFIER  shift 51
	SUB  shift 50
	SIN  shift 47
	COS  shift 48
	SQRT  shift 49
	LPAREN  shift 45
	.  error

	enumerable  goto 53
	expr  goto 67
	number  goto 52
	identifier  goto 46

state 46
	expr:  identifier.LBRACK expr RBRACK 

	LBRACK  shift 68
	.  error


state 47
	expr:  SIN.LPAREN expr RPAREN 

	LPAREN  shift 69
	.  error


state 48
	expr:  COS.LPAREN expr RPAREN 

	LPAREN  shift 70
	.  error


state 49
	expr:  SQRT.LPAREN expr RPAREN 

	LPAREN  shift 71
	.  error


state 50
	expr:  SUB.expr 

	INT_NUMBER  shift 19
	FLOAT_NUMBER  shift 54
	IDENTIFIER  shift 51
	SUB  shift 50
	SIN  shift 47
	COS  shift 48
	SQRT  shift 49
	LPAREN  shift 45
	.  error

	enumerable  goto 53
	expr  goto 72
	number  goto 52
	identifier  goto 46

state 51
	expr:  IDENTIFIER.    (33)
	identifier:  IDENTIFIER.    (35)

	LBRACK  reduce 35 (src line 327)
	.  reduce 33 (src line 312)


state 52
	expr:  number.    (34)

	.  reduce 34 (src line 320)


state 53
	number:  enumerable.    (41)

	.  reduce 41 (src line 374)


state 54
	number:  FLOAT_NUMBER.    (42)

	.  reduce 42 (src line 379)


state 55
	statement_block:  LBRACE NEW_LINE statement_list RBRACE.    (4)

	.  reduce 4 (src line 87)


state 56
	statement_list:  statement_list statement.    (6)
	statement:  statement.NEW_LINE 

	NEW_LINE  shift 57
	.  reduce 6 (src line 100)


state 57
	statement:  statement NEW_LINE.    (14)

	.  reduce 14 (src line 162)


state 58
	statement:  expr ASSIGNED.expr NEW_LINE 

	INT_NUMBER  shift 19
	FLOAT_NUMBER  shift 54
	IDENTIFIER  shift 51
	SUB  shift 50
	SIN  shift 47
	COS  shift 48
	SQRT  shift 49
	LPAREN  shift 45
	.  error

	enumerable  goto 53
	expr  goto 73
	number  goto 52
	identifier  goto 46

state 59
	expr:  expr ADD.expr 

	INT_NUMBER  shift 19
	FLOAT_NUMBER  shift 54
	IDENTIFIER  shift 51
	SUB  shift 50
	SIN  shift 47
	COS  shift 48
	SQRT  shift 49
	LPAREN  shift 45
	.  error

	enumerable  goto 53
	expr  goto 74
	number  goto 52
	identifier  goto 46

state 60
	expr:  expr SUB.expr 

	INT_NUMBER  shift 19
	FLOAT_NUMBER  shift 54
	IDENTIFIER  shift 51
	SUB  shift 50
	SIN  shift 47
	COS  shift 48
	SQRT  shift 49
	LPAREN  shift 45
	.  error

	enumerable  goto 53
	expr  goto 75
	number  goto 52
	identifier  goto 46

state 61
	expr:  expr MUL.expr 

	INT_NUMBER  shift 19
	FLOAT_NUMBER  shift 54
	IDENTIFIER  shift 51
	SUB  shift 50
	SIN  shift 47
	COS  shift 48
	SQRT  shift 49
	LPAREN  shift 45
	.  error

	enumerable  goto 53
	expr  goto 76
	number  goto 52
	identifier  goto 46

state 62
	expr:  expr QUO.expr 

	INT_NUMBER  shift 19
	FLOAT_NUMBER  shift 54
	IDENTIFIER  shift 51
	SUB  shift 50
	SIN  shift 47
	COS  shift 48
	SQRT  shift 49
	LPAREN  shift 45
	.  error

	enumerable  goto 53
	expr  goto 77
	number  goto 52
	identifier  goto 46

state 63
	expr:  expr REM.expr 

	INT_NUMBER  shift 19
	FLOAT_NUMBER  shift 54
	IDENTIFIER  shift 51
	SUB  shift 50
	SIN  shift 47
	COS  shift 48
	SQRT  shift 49
	LPAREN  shift 45
	.  error

	enumerable  goto 53
	expr  goto 78
	number  goto 52
	identifier  goto 46

64: shift/reduce conflict (shift 60(2), red'n 10(0)) on SUB
state 64
	statement:  RETURN expr.    (10)
	expr:  expr.ADD expr 
	expr:  expr.SUB expr 
	expr:  expr.MUL expr 
	expr:  expr.QUO expr 
	expr:  expr.REM expr 

	ADD  shift 59
	SUB  shift 60
	MUL  shift 61
	QUO  shift 62
	REM  shift 63
	.  reduce 10 (src line 128)


state 65
	statement:  IF expr.statement_block ELSE statement_block 
	statement:  IF expr.statement_block 
	expr:  expr.ADD expr 
	expr:  expr.SUB expr 
	expr:  expr.MUL expr 
	expr:  expr.QUO expr 
	expr:  expr.REM expr 

	LBRACE  shift 32
	ADD  shift 59
	SUB  shift 60
	MUL  shift 61
	QUO  shift 62
	REM  shift 63
	.  error

	statement_block  goto 79

state 66
	statement:  FOR expr.statement_block 
	expr:  expr.ADD expr 
	expr:  expr.SUB expr 
	expr:  expr.MUL expr 
	expr:  expr.QUO expr 
	expr:  expr.REM expr 

	LBRACE  shift 32
	ADD  shift 59
	SUB  shift 60
	MUL  shift 61
	QUO  shift 62
	REM  shift 63
	.  error

	statement_block  goto 80

state 67
	expr:  LPAREN expr.RPAREN 
	expr:  expr.ADD expr 
	expr:  expr.SUB expr 
	expr:  expr.MUL expr 
	expr:  expr.QUO expr 
	expr:  expr.REM expr 

	ADD  shift 59
	SUB  shift 60
	MUL  shift 61
	QUO  shift 62
	REM  shift 63
	RPAREN  shift 81
	.  error


state 68
	expr:  identifier LBRACK.expr RBRACK 

	INT_NUMBER  shift 19
	FLOAT_NUMBER  shift 54
	IDENTIFIER  shift 51
	SUB  shift 50
	SIN  shift 47
	COS  shift 48
	SQRT  shift 49
	LPAREN  shift 45
	.  error

	enumerable  goto 53
	expr  goto 82
	number  goto 52
	identifier  goto 46

state 69
	expr:  SIN LPAREN.expr RPAREN 

	INT_NUMBER  shift 19
	FLOAT_NUMBER  shift 54
	IDENTIFIER  shift 51
	SUB  shift 50
	SIN  shift 47
	COS  shift 48
	SQRT  shift 49
	LPAREN  shift 45
	.  error

	enumerable  goto 53
	expr  goto 83
	number  goto 52
	identifier  goto 46

state 70
	expr:  COS LPAREN.expr RPAREN 

	INT_NUMBER  shift 19
	FLOAT_NUMBER  shift 54
	IDENTIFIER  shift 51
	SUB  shift 50
	SIN  shift 47
	COS  shift 48
	SQRT  shift 49
	LPAREN  shift 45
	.  error

	enumerable  goto 53
	expr  goto 84
	number  goto 52
	identifier  goto 46

state 71
	expr:  SQRT LPAREN.expr RPAREN 

	INT_NUMBER  shift 19
	FLOAT_NUMBER  shift 54
	IDENTIFIER  shift 51
	SUB  shift 50
	SIN  shift 47
	COS  shift 48
	SQRT  shift 49
	LPAREN  shift 45
	.  error

	enumerable  goto 53
	expr  goto 85
	number  goto 52
	identifier  goto 46

state 72
	expr:  expr.ADD expr 
	expr:  expr.SUB expr 
	expr:  expr.MUL expr 
	expr:  expr.QUO expr 
	expr:  expr.REM expr 
	expr:  SUB expr.    (32)

	.  reduce 32 (src line 304)


state 73
	statement:  expr ASSIGNED expr.NEW_LINE 
	expr:  expr.ADD expr 
	expr:  expr.SUB expr 
	expr:  expr.MUL expr 
	expr:  expr.QUO expr 
	expr:  expr.REM expr 

	NEW_LINE  shift 86
	ADD  shift 59
	SUB  shift 60
	MUL  shift 61
	QUO  shift 62
	REM  shift 63
	.  error


state 74
	expr:  expr.ADD expr 
	expr:  expr ADD expr.    (24)
	expr:  expr.SUB expr 
	expr:  expr.MUL expr 
	expr:  expr.QUO expr 
	expr:  expr.REM expr 

	MUL  shift 61
	QUO  shift 62
	REM  shift 63
	.  reduce 24 (src line 235)


state 75
	expr:  expr.ADD expr 
	expr:  expr.SUB expr 
	expr:  expr SUB expr.    (25)
	expr:  expr.MUL expr 
	expr:  expr.QUO expr 
	expr:  expr.REM expr 

	MUL  shift 61
	QUO  shift 62
	REM  shift 63
	.  reduce 25 (src line 244)


state 76
	expr:  expr.ADD expr 
	expr:  expr.SUB expr 
	expr:  expr.MUL expr 
	expr:  expr MUL expr.    (26)
	expr:  expr.QUO expr 
	expr:  expr.REM expr 

	.  reduce 26 (src line 253)


state 77
	expr:  expr.ADD expr 
	expr:  expr.SUB expr 
	expr:  expr.MUL expr 
	expr:  expr.QUO expr 
	expr:  expr QUO expr.    (27)
	expr:  expr.REM expr 

	.  reduce 27 (src line 262)


state 78
	expr:  expr.ADD expr 
	expr:  expr.SUB expr 
	expr:  expr.MUL expr 
	expr:  expr.QUO expr 
	expr:  expr.REM expr 
	expr:  expr REM expr.    (28)

	.  reduce 28 (src line 271)


state 79
	statement:  IF expr statement_block.ELSE statement_block 
	statement:  IF expr statement_block.    (12)

	ELSE  shift 87
	.  reduce 12 (src line 146)


state 80
	statement:  FOR expr statement_block.    (13)

	.  reduce 13 (src line 154)


state 81
	expr:  LPAREN expr RPAREN.    (22)

	.  reduce 22 (src line 222)


state 82
	expr:  identifier LBRACK expr.RBRACK 
	expr:  expr.ADD expr 
	expr:  expr.SUB expr 
	expr:  expr.MUL expr 
	expr:  expr.QUO expr 
	expr:  expr.REM expr 

	RBRACK  shift 88
	ADD  shift 59
	SUB  shift 60
	MUL  shift 61
	QUO  shift 62
	REM  shift 63
	.  error


state 83
	expr:  expr.ADD expr 
	expr:  expr.SUB expr 
	expr:  expr.MUL expr 
	expr:  expr.QUO expr 
	expr:  expr.REM expr 
	expr:  SIN LPAREN expr.RPAREN 

	ADD  shift 59
	SUB  shift 60
	MUL  shift 61
	QUO  shift 62
	REM  shift 63
	RPAREN  shift 89
	.  error


state 84
	expr:  expr.ADD expr 
	expr:  expr.SUB expr 
	expr:  expr.MUL expr 
	expr:  expr.QUO expr 
	expr:  expr.REM expr 
	expr:  COS LPAREN expr.RPAREN 

	ADD  shift 59
	SUB  shift 60
	MUL  shift 61
	QUO  shift 62
	REM  shift 63
	RPAREN  shift 90
	.  error


state 85
	expr:  expr.ADD expr 
	expr:  expr.SUB expr 
	expr:  expr.MUL expr 
	expr:  expr.QUO expr 
	expr:  expr.REM expr 
	expr:  SQRT LPAREN expr.RPAREN 

	ADD  shift 59
	SUB  shift 60
	MUL  shift 61
	QUO  shift 62
	REM  shift 63
	RPAREN  shift 91
	.  error


state 86
	statement:  expr ASSIGNED expr NEW_LINE.    (8)

	.  reduce 8 (src line 113)


state 87
	statement:  IF expr statement_block ELSE.statement_block 

	LBRACE  shift 32
	.  error

	statement_block  goto 92

state 88
	expr:  identifier LBRACK expr RBRACK.    (23)

	.  reduce 23 (src line 227)

